WIP: Android port Script to automatically publish release on gh-pages (WIP)

--- a/doc/devkit/mainpage.dox
+++ b/doc/devkit/mainpage.dox
@@ -68,6 +68,7 @@ and a triangular or tetrahedral mesh embedded in n dimensions), and
 semi-discrete optimal transport.
 
 - [Geogram website on github](https://github.com/BrunoLevy/geogram)
+- [Geogram wiki](https://github.com/BrunoLevy/geogram)
 - [Online demos](http://homepages.loria.fr/BLevy/GEOGRAM/)
 - How to compile Geogram: [Linux](https://github.com/BrunoLevy/geogram/wiki/compiling_Linux)
                           [Windows](https://github.com/BrunoLevy/geogram/wiki/compiling_Windows)
